# StatisticalLifetime

./: GPT_REFACTOR.py
Alpha/: pyproject.toml
Alpha/statisticallifetimes/: Dependencies.py  Fitting.py  Lifetime.py  Parallelised.py  Wrangling.py  __init__.py  utils.py
Test/: Test copy.py  Test.py  Test.slt
binsLT/: pyproject.toml
binsLT/binslt/: Parallelised.py  __init__.py  binslt.py  dependencies.py  fitting.py  histogram.py  lifetime.py  old_lifetimes.py  utils.py  wrangling.py
v230509/: Estimates.py  Histogram.py  Levels.py  Lifetime.py  Operations.py  Parallelised.py  Test.py  Testing_out.csv  Wrangling.py  main.py
v230516/: Dependencies.py  Distributions.py  Estimates.py  Fitting.py  Histogram.py  Lifetime.py  Parallelised.py  Testing.py  Wrangling.py  __init__.py
v230516_2/StatisticalLifetime/: Parallelised.py  __init__.py  utils.py
v230518/: README.md  pyproject.toml
v230518/slt/: Dependencies.py  Fitting.py  Histogram.py  Lifetime.py  __init__.py
